--- a/src/css/style.css
+++ b/src/css/style.css
@@ -35,7 +35,7 @@ nav{
 
 .main{
     width: 100%;
-    height: calc(100%-60px);
+    height: calc(100% - 60px);
     background: url(../img/%D0%9F%D0%B0%D1%80%D0%B5%D0%BD%D1%8C.png) 90% 100%/auto 85% no-repeat , url(../img/%D1%84%D0%BE%D0%BD.jpg) center/cover no-repeat;
 }
 
@@ -45,3 +45,92 @@ nav{
     color: #2c384a;
     text-align: center;
 }
+
+.title__container h1{
+    font-size: 60px;
+    font-weight: bold;
+    
+}
+
+.title__container h4{
+    margin-top: 40px;
+    font-size: 22px;
+    color: #79818c;
+}
+
+.title__container input{
+    height: 40px;
+    text-align: center;
+    border: 2px solid #6d7682;
+    border-radius: 5px;
+    color: #6d7682;
+    font-size: 13px;
+    padding: 0px 16px;
+    margin: 58px 14px 0px 14px;
+    
+    
+}
+
+
+.title__container2 h2{
+    margin-left: 900px;
+    margin-top: 109px;
+    color: #263244;
+    font-size: 33px;
+    font-weight: bold;
+}
+
+.title__container2 img{
+    margin-left: 870px;
+    margin-top: 100px;
+}
+
+.title__container2 p{
+    margin-left: 600px;
+    margin-top: 36px;
+}
+    
+.title__container2 input{
+    height: 40px;
+    text-align: center;
+    border: 2px solid #6d7682;
+    border-radius: 5px;
+    color: #6d7682;
+    font-size: 13px;
+    padding: 0px 16px;
+    margin: 58px 14px 0px 14px;
+    margin-left: 890px;
+    margin-top: 36px;
+    
+}
+
+.title__container3 h2{
+    margin-left: 895px;
+    margin-top: 109px;
+    color: #263244;
+    font-size: 33px;
+    font-weight: bold;
+}
+
+.title__design{
+    margin-left: 15px;
+    float: left;
+}
+
+.title__development{
+    float: left;
+    margin-left: 15px;
+
+}
+
+.title__optimization{
+    float: left;
+    margin-left: 15px;
+    
+}
+
+.title__marketing{
+    margin-left: 15px;
+    
+}
+
