--- a/src/css/style.css
+++ b/src/css/style.css
@@ -113,24 +113,56 @@ nav{
 }
 
 .title__design{
-    margin-left: 15px;
+    margin-top: 131px;
+    margin-left: 400px;
     float: left;
 }
 
-.title__development{
+.title__develompent{
+    margin-top: 131px;
     float: left;
-    margin-left: 15px;
+    margin-left: 80px;
 
 }
 
 .title__optimization{
+    margin-top: 131px;
     float: left;
-    margin-left: 15px;
+    margin-left: 80px;
     
 }
 
 .title__marketing{
-    margin-left: 15px;
+    margin-top: 131px;
+    float: left;
+    margin-left: 80px;
     
 }
+
+.main2{
+    width: 100%;
+    margin-top: 100px;
+    height: calc(100% - 500px);
+    
+    background: url(../img/%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B0%20%D1%84%D0%BE%D0%BD%D0%B0.png) center;
+}
+
+.title__design h6{
+    text-align: center;
+    color: #cf7600;
+    font-weight: bold;
+    
+}
+
+.title__design p{
+    text-align: center;
+}
+
+
+.title__design img{
+    
+}
+
+
+
 
