--- a/src/css/style.css
+++ b/src/css/style.css
@@ -73,7 +73,7 @@ nav{
 
 
 .title__container2 h2{
-    margin-left: 900px;
+    text-align: center;
     margin-top: 109px;
     color: #263244;
     font-size: 33px;
@@ -81,7 +81,7 @@ nav{
 }
 
 .title__container2 img{
-    margin-left: 870px;
+    margin-left: 850px;
     margin-top: 100px;
 }
 
@@ -105,8 +105,8 @@ nav{
 }
 
 .title__container3 h2{
-    margin-left: 895px;
-    margin-top: 109px;
+    text-align: center;
+    padding-top: 106px;
     color: #263244;
     font-size: 33px;
     font-weight: bold;
@@ -114,7 +114,7 @@ nav{
 
 .title__design{
     margin-top: 131px;
-    margin-left: 400px;
+    margin-left: 340px;
     float: left;
 }
 
@@ -141,13 +141,15 @@ nav{
 
 .main2{
     width: 100%;
-    margin-top: 100px;
-    height: calc(100% - 500px);
+    margin-top: 50px;
+    height: 520px;
     
-    background: url(../img/%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B0%20%D1%84%D0%BE%D0%BD%D0%B0.png) center;
+    background: url(../img/%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B0%20%D1%84%D0%BE%D0%BD%D0%B0.png) center/cover no-repeat;
+    background-position: top;
 }
 
 .title__design h6{
+    margin-top: 30px;
     text-align: center;
     color: #cf7600;
     font-weight: bold;
@@ -156,13 +158,403 @@ nav{
 
 .title__design p{
     text-align: center;
+    line-height: 20px;
+    margin-top: 10px;
 }
 
 
 .title__design img{
+    margin: 0 auto;
+    display: block;
+}
+
+.title__develompent h6{
+    margin-top: 30px;
+    text-align: center;
+    color: #cf7600;
+    font-weight: bold;
+}
+
+.title__develompent p{
+    text-align: center;
+    line-height: 20px;
+    margin-top: 10px;
+}
+
+.title__develompent img{
+    margin: 0 auto;
+    display: block;
+}
+
+.title__optimization h6{
+    margin-top: 30px;
+    text-align: center;
+    color: #cf7600;
+    font-weight: bold;
+}
+
+.title__optimization p{
+    margin-top: 10px;
+    text-align: center;
+    line-height: 20px;
+}
+
+.title__optimization img{
+    margin: 0 auto;
+    display: block;
+}
+
+.title__marketing h6{
+    margin-top: 30px;
+    text-align: center;
+    color: #cf7600;
+    font-weight: bold;
+}
+
+.title__marketing p{
+    text-align: center;
+    line-height: 20px;
+    margin-top: 10px;
+}
+
+.title__marketing img{
+    margin: 0 auto;
+    display: block;
+}
+
+.main_portfolio h2{
+    text-align: center;
+    margin-top: 110px;
+    color: #263244;
+    font-size: 33px;
+    font-weight: bold;
+    
+}
+
+.main_portfolio>p{
+    margin-top: 70px;
+    text-align: center;
+}
+
+.main_portfolio img{
+    margin-top: 44px;
+}
+
+.main__portfolio2{
+    margin-left: 390px;
+    float: left;
+    line-height: 25px;
+}
+
+.main__portfolio2 h3{
+    color: #263244;
+    font-size: 20px;
+    font-weight: bold;
+    
+}
+
+.main__portfolio2 input{
+    height: 40px;
+    width: 200px;
+    text-align: center;
+    border: 2px solid #63b5ae;
+    border-radius: 5px;
+    color: #ffff;
+    font-size: 13px;
+    padding: 0px 16px;
+    margin-top: 25px;
+    background-color: #63b5ae
+}
+
+.main__portfolio3{
+    margin-left: 170px;
+    float: left;
+    line-height: 20px;
+}
+
+.main__portfolio3 h3{
+    color: #263244;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+
+.main_cost{
+    margin-left: 500px;
+    margin-right: 500px;
+}
+
+.main_cost h2{
+    text-align: center;
+    margin-top: 110px;
+    color: #263244;
+    font-size: 33px;
+    font-weight: bold;
+    margin-bottom: 50px;
+}
+
+.main_cost h3{
+    text-align: left;
+    color: #263244;
+    font-size: 25px;
+    font-weight: bold;
+    
+}
+
+.stats_background{
+    width: 100%;
+    margin-top: 150px;
+    height: 500px;
+    
+    background: url(../img/%D1%84%D0%BE%D0%BD.png) center/cover no-repeat;
+    background-position: top;
+}
+
+.main_stats h2{
+    text-align: center;
+    padding-top: 105px;
+    color: #263244;
+    font-size: 33px;
+    font-weight: bold;
+}
+
+li.smile{
+    margin-top: 90px;
+    margin-left: 340px;
+    float: left;
+}
+
+li.clock{
+    margin-top: 90px;
+    margin-left: 230px;
+    float: left;
+}
+
+li.works{
+    margin-top: 90px;
+    margin-left: 230px;
+    float: left;
+}
+li.cup{
+    margin-top: 90px;
+    margin-left: 230px;
+    float: left;
+}
+
+img.img_title{
+    margin: 30px 0px 0px 915px;
+}
+
+img.img_title2{
+    margin: 30px 0px 0px 915px;
+}
+
+img.img_title3{
+    margin: 30px 0px 0px 915px;
+}
+img.img_title4{
+    margin: 30px 0px 0px 915px;
+}
+
+.main_stats span{
+    line-height: 50px;
+    text-align: center;
+    margin-top: 110px;
+    color: #263244;
+    font-size: 25px;
+    font-weight: bold;
+    
+}
+
+.main_stats li{
+     text-align: center;
+    margin-top: 110px;
+    color: #263244;
+    font-weight: bold;
+}
+
+.main_reviews h2{
+    text-align: center;
+    margin: 105px 0px 32px 0px;
+    color: #263244;
+    font-size: 33px;
+    font-weight: bold;
+    
+}
+
+img.img_title5{
+    margin-left: 915px;
+}
+
+img.img_title6{
+    margin-left: 900px;
+    margin-top: 60px;
+}
+
+.main_reviews p{
+    text-align: center;
+    margin-top: 40px;
+    line-height: 20px;
+}
+
+.main_reviews span{
+    font-weight: bold;
+}
+
+.reviews_input{
+    margin-left: 930px;
+    margin-bottom: 88px;
+    margin-top: 48px;
+}
+
+.background_contacts {
+    width: 100%;
+    margin-top: 150px;
+    height: 800px;
+    
+    background: url(../img/%D0%A4%D0%BE%D0%BD3.png) center/cover no-repeat;
+    background-position: top;
+}
+
+.main_contacts h2{
+    text-align: center;
+    padding-top: 100px;
+    color: #ffffff;
+    font-size: 33px;
+    font-weight: bold;
+}
+
+img.img_title7{
+    margin-left: 915px;
+    margin-top: 40px;
+}
+
+.background_contacts>p {
+    text-align: center;
+    margin-top: 30px;
+    color: #ffff;
+}
+
+.contacts_adress{
+    margin-top: 45px;
+    float: left;
+    margin-left: 80px;
+    color: #ffff;
+    margin-left: 660px;
+}
+
+.contacts_mail{
+    margin-top: 45px;
+    float: left;
+    margin-left: 80px;
+    color: #ffff;
+}
+
+.contacts_number{
+    margin-top: 45px;
+    float: left;
+    margin-left: 80px;
+    color: #ffff;
+}
+.main_feedback h3{
+    text-align: center;
+    margin-top: 50px;
+    color: #ffffff;
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 35px;
+}
+
+.main_feedback form{
+    margin-left: 590px;
+}
+
+.contacts {
+    margin-top: 49px;
+}
+input.input1 {
+    width: 350px;
+    height: 34px;
+    margin-bottom: 13px;
+    padding: 12px 0px 15px 15px;
+
+}
+
+input.input2 {
+    width: 350px;
+    height: 34px;
+    margin-left: 30px;
+    padding: 12px 0px 15px 15px;
+
+}
+
+.main_feedback textarea{
+    width: 735px;
+    height: 95px;
+    padding: 15px 0px 75px 13px;
+    
+}
+
+input.input3{
+    margin-left: 315px;
+    margin-top: 30px;
+    height: 45px;
+    width: 120px;
+    text-align: center;
+    border: 2px solid #ffff;
+    border-radius: 5px;
+    color: #ffff;
+    font-size: 15px;
+    padding: 0px 16px;
+    background: none;
+}
+
+.contacts_adress img{
+   margin: 0 auto;
+    display: block; 
+}
+
+.contacts_mail img{
+   margin: 0 auto;
+    display: block; 
+}
+
+.contacts_number img{
+   margin: 0 auto;
+    display: block; 
+}
+
+.contacts_adress p{
+    text-align: center;
+   margin-top: 10px; 
+}
+
+.contacts_mail p{
+   margin-top: 10px; 
+}
+
+.contacts_number p{
+   margin-top: 10px;
+}
+
+.main_author{
+    width: 100%;
+    height: 90px;
+}
+
+.main_map img{
+    width: 100%;
+    height: 350px;
     
 }
 
 
+.main_author{
+    background-color: #354051;
+        padding: 40px 790px 40px 790px;
+}
 
-
+.main_author span{
+    color: #ffff;
+    font-size: 13px;
+}
