--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,23 @@
+@font-face {
+    font-family: 'FranklinGot';
+    src: url('../fonts/FranklinGothic-Book.eot');
+    src: url('../fonts/FranklinGothic-Book.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/FranklinGothic-Book.woff2') format('woff2'),
+        url('../fonts/FranklinGothic-Book.woff') format('woff'),
+        url('../fonts/FranklinGothic-Book.ttf') format('truetype'),
+        url('../fonts/FranklinGothic-Book.svg#FranklinGothic-Book') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
 body{
     font-family: Arial, sans-serif;
 }
 
+.icon-clubs{
+    animation:  fa-spin 2s infinite linear;
+}
 
 nav{
     width:100%;
@@ -15,18 +31,14 @@ nav{
     color: #fff;
     font-size: 28px;
     line-height: 60px;
-    padding-left: 388px;
-    float: left;
     -webkit-animation: comming 2s ease;
     -o-animation: comming 2s ease;
     animation: comming 2s ease;
-    
+    font-family: 'FranklinGot', sans-serif;
 }
 
 .menu{
-    float: left;
-    padding-left: 432px;
-    
+    float: left;    
 }
 
 .menu li{
@@ -34,12 +46,13 @@ nav{
     line-height: 60px;
     color: #fff;
     margin-right: 40px;
-    font-size: 16px;
+    font-size: 14px;
     text-transform: uppercase;
     -webkit-animation: topshift 0.4s ease forwards;
     -o-animation: topshift 0.4s ease forwards;
     animation: topshift 0.4s ease forwards;
     opacity: 0;
+    
 }
 
 .menu li:nth-child(2){
@@ -63,6 +76,7 @@ nav{
     transition: all 0.1s;
     transform: scale(1);
     display: inline-block;
+    text-decoration: none;
 }
 
 .menu li a:hover{ 
@@ -83,7 +97,6 @@ nav{
 
 .title__container{
     float: left;
-    margin: 432px 0px 0px 404px;
     color: #2c384a;
     text-align: center;
     -webkit-animation: titlemove 1s ease forwards;
@@ -155,7 +168,7 @@ nav{
     }
     to{
         opacity: 1;
-        margin-left: 404px;
+        margin-left: 0px;
     }
 }
 
@@ -167,14 +180,6 @@ nav{
     font-weight: bold;
 }
 
-.title__container2 img{
-    margin-left: 855px; 
-}
-
-.title__container2 p{
-    margin-left: 600px;
-    margin-top: 36px;
-}
     
 .title__container2 input{
     height: 40px;
@@ -184,11 +189,10 @@ nav{
     color: #6d7682;
     font-size: 13px;
     padding: 0px 16px;
-    margin: 58px 14px 0px 14px;
-    margin-left: 890px;
-    margin-top: 36px;
+    transition-duration: 0.2s;
     
 }
+
 
 .title__container3 h2{
     text-align: center;
@@ -246,7 +250,41 @@ nav{
     text-align: center;
     line-height: 20px;
     margin-top: 10px;
+    
 }
+
+
+
+.title__design{
+    perspective-origin: center;
+    perspective: 400px;
+}
+
+.title__develompent{
+    perspective-origin: center;
+    perspective: 400px;
+}
+
+.title__optimization{
+    perspective-origin: center;
+    perspective: 400px;
+}
+
+.title__marketing{
+    perspective-origin: center;
+    perspective: 400px;
+}
+
+.title__3d{
+    display: inline-block;
+     transition-duration: 2s;
+    transition: all 0.8s ease 0s;
+}
+
+.title__3d:hover{
+    transform: translate3d(20px, 30px, 50px)
+}
+
 
 
 .title__design img{
@@ -349,7 +387,8 @@ nav{
     font-size: 13px;
     padding: 0px 16px;
     margin-top: 25px;
-    background-color: #63b5ae
+    background-color: #63b5ae;
+    transition: 0.2s;
 }
 
 .main__portfolio2 input:active{
@@ -361,6 +400,11 @@ nav{
     transform: scale(1.1);
     color: white;
     background: black;
+}
+
+.title__container2 input:hover{
+    
+    animation: jello 1.2s forwards;
 }
 
 .main__portfolio3{
@@ -476,20 +520,6 @@ li.cup{
     animation-iteration-count: infinite;
 }
 
-.stats_background li:nth-child(2){
-    animation-delay: 1s;
-}
-
-.stats_background li:nth-child(3){
-    animation-delay: 2s;
-}
-
-.stats_background li:nth-child(4){
-    animation-delay: 3s;
-}
-
-
-
 
 img.img_title{
     display: block;
@@ -520,9 +550,6 @@ img.img_title4{
     
 }
 
-.foto:hover{
-    transform: rotateX(50deg)
-}
 
 .main_stats li{
      text-align: center;
@@ -715,4 +742,30 @@ input.input3{
 .main_author span{
     color: #ffff;
     font-size: 13px;
+}
+
+.white-btn:visited{
+    color: white;
+}
+
+@media (max-width: 992px){
+    .title__container, .title__container h4{
+        color:white;
+        position: relative;
+        z-index: 3;
+    }
+    .main{
+        position: relative;
+    }
+    
+    .main:after{
+        content: "";
+        bottom: 0;
+        top: 0;
+        left: 0;
+        right: 0;
+        position: absolute;
+        background: rgba(0,0,0,0.4);
+        z-index: 1;
+    }
 }
